app/assets/stylesheets/about_contact.scss
.dp-container{
  margin: none;
  border: none;
  .display-picture{
    width: 60%;
    max-height: 90%;
    margin: auto;
    overflow: hidden;
    border-style: solid;
    border-radius: 50%;
    border-color: #5bc5ff;
    border-width: 5px;
    img{
      max-width: 100%;
    }
  }
}

.info-container{
  .social-media{
    padding-top: 20px;
    width: 100%;
    height: 35%;
    h4{
      margin-top: 0px;
    }
    ul{
      list-style-type: none;
      padding: 0px;
      li{
        display: inline;
        padding-right: 15px;
        img{
          width: 50px;
        }
      }
    }
  }
  .buttons{
    width: 100%;
    height: 25%;
    .button-container{
      display: inline;
      float: left;
      height: 100%;
      width: 33%;
      a.btn{
        padding: 10%;
        display: block;
        width: 95%;
        border-style: solid;
        border-radius: 25px;
        border-color: #5bc5ff;
        border-width: 4px;
        text-align: center;
        font-size: 25px;
        color: #5bc5ff;
      }
      a.btn:hover{
        background-color: #5bc5ff;
        color: white;
      }
    }
  }
}

.blurb-container{
  float: left;
  width: 100%;
  height: 50%;
  .blurb{
    padding-left: 50px;
    padding-right: 50px;
  }

  // .skill-container{
  //   width: 100%;
  //   margin: auto;
  //   height: 150px;
  //   background-color: #f3f3f3;
  //   border-style: solid;
  //   border-width: 0.5px;
  //   border-radius: 15px;
  //   padding: 7px;
  //   margin-bottom: 10px;
  //   .img-container{
  //     img{
  //       max-width: 50px;
  //       max-height: 52px;
  //     }
  //   }
  //   p{
  //     margin-top: 0px;
  //   }
  //   p.skill-name{
  //     margin-bottom: 0px;
  //     margin-top: 5px;
  //     font-weight: 900;
  //     font-size: 20px;
  //   }
  // }
}

